--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,13 @@ go.work.sum
 # app
 backup
 *.json
-scraper
+!package.json
+!package-lock.json
 .DS_Store
+build
+
+# Frontend / Wails
+node_modules/
+frontend/dist/
+frontend/wailsjs/
+*.md5
